--- a/Haskell/FP.tex
+++ b/Haskell/FP.tex
@@ -239,7 +239,7 @@ abs n  = if n >= 0 then n else -n
 Haskell as most programming languages also allow for nested if statements, for example:
 \begin{lstlisting}
 signum  :: Int -> Int
-sugnum n = if n < 0 then -1 else
+signum n = if n < 0 then -1 else
                 if n == 0 then 0 else 1
 \end{lstlisting}
 In Haskell all if statements must have an else branch, this way it avoids ambiguity problems on nested ifs.
