small fix on lecture 3

--- a/tex/OOnotes.tex
+++ b/tex/OOnotes.tex
@@ -251,7 +251,7 @@ data in static methods.
 We are introduced to 3 Java classes that we ended up using a lot. They were:
 
 \begin{enumerate}
-\item System: Class for things like text output. You can use System.out.println to print to the screen.
+\item System: Class for things like text output. You can use System.out.println to print to the console.
 \item Jframe: top level windows
 \item Jlabel: GUI component labels within a window.
 \end{enumerate}
