--- a/tex/OOnotes.tex
+++ b/tex/OOnotes.tex
@@ -1100,7 +1100,7 @@ be specific.
 
 
 We are introduced to the word \emph{threadsafe}. A system is said to be threadsafe if multiple threads are 
-running at the same time and using it won't cause problems. Swint is NOT threadsafe.
+running at the same time and using it won't cause problems. Swing is NOT threadsafe.
 
 \section{Lecture 9 - Concurrency, exceptions}
 
