started notes for software maintenance

--- a/SWM/SWMnotes.tex
+++ b/SWM/SWMnotes.tex
@@ -63,9 +63,9 @@ First of all, I have no idea why we have an exam for this module. I don't even k
 Software maintenance can be put into \textbf{three} categories:
 
 \begin{enumerate}
-\item \textbf{Corrective Maintenance} $\longrightarrow$
-\item \textbf{Adaptive Maintenance}
-\item \textbf{Perfective/Performance Maintenance}
+\item \textbf{Corrective Maintenance} $\longrightarrow$ Basically fixing bugs
+\item \textbf{Adaptive Maintenance} $\longrightarrow$ Adapting the software due to environmental changes, such as laws and updated requirements from the business
+\item \textbf{Perfective/Performance Maintenance} $\longrightarrow$ Improving the performance of the software, this doesn't change functionality
 \end{enumerate}
 
 \end{document}
