done most of lecture 1

--- a/SWM/SWMnotes.tex
+++ b/SWM/SWMnotes.tex
@@ -68,4 +68,49 @@ Software maintenance can be put into \textbf{three} categories:
 \item \textbf{Perfective/Performance Maintenance} $\longrightarrow$ Improving the performance of the software, this doesn't change functionality
 \end{enumerate}
 
+They mention some shit about how \emph{maintenance} is `preserving software in a working state' whilst \emph{evolution} refers to improving the software. They talk about how shit code is when dealing with large software and basically a pain in the arse and WHY it is a pain in the arse. The reasons are pretty simple e.g messy and bad commenting. They then give a reminder of some Object Orientation concepts which we need to know/understand. These include:
+
+\begin{itemize}
+\item \textbf{Abstraction} $\longrightarrow$ When you only concentrate on the essential characteristics of the software. Basically removing the need to deal with BS
+\item \textbf{Inheritance} $\longrightarrow$ When one object acquires the properties of another which allows for ez object relationships
+\item \textbf{Encapsulation} $\longrightarrow$ Hiding internal implementation and requiring that user interaction can only be performed via an object's methods
+\item \textbf{Modularity} $\longrightarrow$ When source code for an object can be written/edited independently of the source code for other objects
+\item \textbf{Polymorphism} $\longrightarrow$ When classes can have different implementations of the same methods
+\end{itemize}
+
+For more information on Object Orientation and its concepts, check out my PG-13 \href{https://github.com/pedsm/team40/blob/master/PGP-OO/OOnotes.pdf}{\color{blue}{notes}} on the topic.
+
+\newpage
+
+They list the essentials of software maintenance in a list as follows: 
+
+\begin{itemize}
+\item Understanding the client
+\item Understanding the code
+\item Refactoring the code
+\item Extending the code
+\item Working as a team
+\item Managing client expectations
+\item Managing maintenance process
+\end{itemize}
+
+\subsection{Understanding the code}
+
+They express that with large amounts of code, it is important to understand the structure of the code. Yep, you guessed it, that means class diagrams and other shitty visualisation techniques. I'll give a quick recap of all that garbage.
+
+\subsubsection{Class Diagrams}
+Classes are blueprints for objects in a software. They contain data and perform operations. Class diagrams represent these blueprints. They are said to address a `static design view' of a system because they document the main structure of the software. This differs to behavioural diagrams such as use case and activity diagrams which document the dynamic aspects such as the methods and collaborations.
+\\
+Class diagrams contain three rows, and arrows to represent relationships. The categories are:
+\begin{enumerate}
+\item Class Name 
+\item Attributes $\longrightarrow$ the variables and arrays etc.
+\item Operations $\longrightarrow$ the functions/methods
+\end{enumerate}
+
+\includegraphics[scale = 0.6]{class1} %first class diagram
+
+\newpage
+axax
+
 \end{document}
