--- a/SWM/SWMnotes.tex
+++ b/SWM/SWMnotes.tex
@@ -98,7 +98,7 @@ They list the essentials of software maintenance in a list as follows:
 
 They express that with large amounts of code, it is important to understand the structure of the code. Yep, you guessed it, that means class diagrams and other shitty visualisation techniques. I'll give a quick recap of all that garbage.
 
-\subsubsection{Class Diagrams}
+\subsubsection{Class Diagrams Review}
 Classes are blueprints for objects in a software. They contain data and perform operations. Class diagrams represent these blueprints. They are said to address a `static design view' of a system because they document the main structure of the software. This differs to behavioural diagrams such as use case and activity diagrams which document the dynamic aspects such as the methods and collaborations.
 \\
 Class diagrams contain three rows, and arrows to represent relationships. The categories are:
@@ -111,6 +111,17 @@ Class diagrams contain three rows, and arrows to represent relationships. The ca
 \includegraphics[scale = 0.6]{class1} %first class diagram
 
 \newpage
-axax
+Class diagrams are good because they provide a simple summary of the classes and relationships. But for larger projects, they can be a pain in the arse. Here's a reminder for the relationships (they don't give this on the slides so you can thank me later or by me a drink).
+\\\\\\ % spacing for presentation reasons
+\includegraphics[scale = 0.35]{classRelationships}
+
+The speak a bit about how important testing is. They express the importance of testing. As for types of testing, they can be broken down into:
+
+\subsection{Testing Introduced}
+
+\begin{itemize}
+    \item \textbf{Regression Testing} $\longrightarrow$ This is when after you do a bug fix or change, you re-test to make sure that all of the old functionality is still there, and that the bug is fixed
+    \item \textbf{Unit Testing} $\longrightarrow$ Automated tests to test the internal workings of the methods. The test is usually made to be small and as isolated as possible and so usually doesn't rely on other resources in the software
+\end{itemize}
 
 \end{document}
