--- a/SWM/SWMnotes.tex
+++ b/SWM/SWMnotes.tex
@@ -144,7 +144,8 @@ Most of these interfaces can be found in the java.util.* package, whilst the `It
 \\\\
 \includegraphics[scale = 0.65]{jcfImplementations}
 \newpage
-
+\subsection{Implementations}
+\subsubsection{ArrayList}
 For the next part of the lecture they show code examples of the ArrayList, TreeSet and HashMap classes. ArrayLists are probably the most important so here's an example of that in use:
 
 \begin{lstlisting}
@@ -159,7 +160,6 @@ public class ArrayListExample {
 	  /*This is how elements should be added to the array list*/
 	  obj.add("Javascript is shit");
 	  obj.add("Coffeescript is shit");
-	  obj.add("Haskell is shit");
 	  obj.add("Low level is best level");
 	  obj.add("Pedro noob");
 
@@ -172,19 +172,26 @@ public class ArrayListExample {
 
 	  /*Remove elements from array list like this*/
 	  obj.remove("Pedro noob");
-	  obj.remove("Haskell is shit");
+	  obj.remove("Coffeescript is shit");
 
 	  System.out.println("Current array list is:"+obj);
 
-	  /*Remove element from the given index*/
-	  obj.remove(1);
+	  obj.remove(1); //Remove element from the given index
 
 	  System.out.println("Current array list is:"+obj);
    }
 }
 \end{lstlisting}
 
-Note that in the ArrayList declaration you have to give the type. This is because Java is too shit to understand it if you try to use a constructor instead.
+Note that in the ArrayList declaration you have to give the type. This is because Java is too shit to understand it if you try to use a constructor instead. 
+\subsubsection{HashMaps}
+The example they used for HashMaps is decent so I'll include that for reference:
+\\\\
+\includegraphics[scale = 0.7]{hashMap}
+\\\\
+An ez way of thinking of HashMaps is basically an array with a key to each element. The HashMap class implements the Map interface.
+
+
 
 
 \end{document}
